Sat Apr 10 11:03 PM - (Tweaking menus, importing code for sign up form on landing page, playing with most popular widget in primary sidebar, removing home.php and replacing with front-page.php)

--- a/wp-content/themes/genesis/style.css
+++ b/wp-content/themes/genesis/style.css
@@ -1178,6 +1178,12 @@ p.entry-meta {
 	margin-bottom: 60px;
 }
 
+.sidebar .widget.widget_search, .sidebar .widget.widget_text {
+	background: none;
+	padding-left: 0;
+	padding-right: 0;
+	margin-bottom: 0px;
+}
 
 /* # Site Footer
 ---------------------------------------------------------------------------------------------------- */
